todo-single-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: todo-manager
spec:
  #ReplicaSet
  replicas: 3

  #Deployment
  selector:
    matchLabels:
      app: todo-manager
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate

  #Pods
  template:
    metadata:
      labels:
        app: todo-manager
    spec:
      containers:
        #TODO Manager
        - name: todo-manager
          image: dlag/todo-manager:v1.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /todos
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /todos
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 60
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 90m
              memory: 230Mi
        #Redis
        - name: redis
          image: redis
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 100Mi
            requests:
              cpu: 90m
              memory: 100Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: todo-manager
  labels:
    app: todo-manager
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: todo-manager
