rke-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-manager
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: todo-manager.lagoza.name
    http:
      paths:
      - backend:
          serviceName: todo-manager
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - todo-manager.lagoza.name
